# content-based-image-retrieval

./: .clang-format  CMakeLists.txt  README.txt  compile_commands.json
.zed/: tasks.json
include/: csv_util.cpp  csv_util.h  faceDetect.cpp  faceDetect.h  filter.cpp  filter.h
src/: main.cpp  matching.cpp  matching.hpp
